FSAA-related documentation cleanup.
[ ] May break build
[ ] May break existing applications
[ ] Bugfix
[ ] New Feature
[x] Cleanup
[ ] Optimization
[x] Documentation

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -5887,8 +5887,8 @@ compound
 
     viewport [ viewport ]            # wrt parent compound, sort-first
     range    [ float float ]         # DB-range for sort-last
-    pixel    [ int int ]             # pixel decomposition (step size)
-    subpixel [ int int ]			 # subpixel decomposition (index size)
+    pixel    [ int int int int ]     # pixel decomposition (x y w h)
+    subpixel [ int int ]	     # subpixel decomposition (index size)
     eye      [ CYCLOP LEFT RIGHT ]   # monoscopic or stereo view
     zoom     [ float float ]         # up/downscale of parent pvp
     period   int                     # DPlex period, every nth frame rendered
