--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -25,7 +25,7 @@
 \end{textblock} {\Large The official reference for developing and
   deploying parallel, scalable OpenGL\texttrademark\ applications based on
   the Equalizer parallel rendering framework}\\\vspace{1cm}
-Version 1.7.1 for Equalizer 0.9+svn\\[\medskipamount]
+Version 1.7.2 for Equalizer 0.9+svn\\[\medskipamount]
 %  \today
 }
 
@@ -58,7 +58,7 @@ Version 1.7.1 for Equalizer 0.9+svn\\[\medskipamount]
 
 Written by Stefan Eilemann.\\
 Engineering contributions by Maxim Makhinya, Jonas B\"osch, Christian
-Marten and Patrick Bouchaud.
+Marten, Sarah Amsellem and Patrick Bouchaud.
 
 \subsection*{Copyright}
 
@@ -127,6 +127,7 @@ Combined 2D/DB [top left], DPlex [middle left], Pixel [middle center],
     1.6     & Aug 07, 2009 & Revision for Equalizer 0.9\\
     1.7.0   & Sep 09, 2009 & Updates based on hardcopy print\\
     1.7.1   & Oct 20, 2009 & Updates for new eq::GLWindow\\
+    1.7.2   & Nov 18, 2009 & Add \sref{sSubpixel} and \sref{sFSAA} for Subpixel compounds\\
     \hline
   \end{tabularx}}
 \clearpage
@@ -469,33 +470,36 @@ therefore not be rendered in place, like with the other compound modes.
 \end{figure}
 
 
-\subsection{Subpixel Compounds}
+\subsection{\label{sSubpixel}Subpixel Compounds}
 
-Subpixel decomposes the rendering into different jittered frusta so 
-that the recomposition anti-aliases the final rendering.
-The Subpixel compound is also compatible with applications doing their own software 
-anti-aliasing.
+Subpixel decomposes the rendering of multiple samples for one pixel, e.g., for
+anti-aliasing or depth-of-field rendering. The default implementation provides
+transparent, scalable software idle-antialiasing when configuring a subpixel
+compound.
+
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/Subpixel.pdf}
+  {\caption{\label{fSubpixel}\small A Subpixel Compound}}
+\end{wrapfigure}
+Applications can use subpixel compounds to accelerate depth-of-field effects and
+software anti-aliasing, with potentially a different number of idle or non-idle
+samples per pixel.
 
 As for the DB compound, the subpixel recomposition has linear increasing 
 IO requirements for the pixel transfer with the difference that only 
 color information has to be transmitted.
 
-Subpixel compounds in Equalizer are configured using the \textsf{subpixel}
-parameter, using the values \textsf{[ index size ]}. The \textsf{index} 
-parameter corresponds to the current ressource's index and the \textsf{size} 
-is the total number of ressources needed.
+Subpixel compounds are configured using the \textsf{subpixel} parameter, using
+the values \textsf{[ index size ]}. The \textsf{index} parameter corresponds to
+the current resource index and the \textsf{size} is the total number of
+resources used.
 
-The \textsf{index} has to be smaller than the ressources \textsf{size}. 
-\fig{fSubpixel} illustrates a four-way subpixel decomposition.
+The \textsf{index} has to be smaller than the \textsf{size}. 
+\fig{fSubpixel} illustrates a three-way subpixel decomposition.
 
 The destination channel can also be used as a source channel. 
 As for the pixel compound, it has to use an output and corresponding 
 input frame.
-
-\begin{figure}[ht!]\center
-  \includegraphics[width=.9\textwidth]{images/subpixel.pdf}
-  {\caption{\label{fSubpixel}A four-way Subpixel compound}}
-\end{figure}
 
 
 \subsection{\label{sLoadBalancing}Automatic Runtime Adjustments}
@@ -756,14 +760,14 @@ place layout views correctly.
 
 \subsection{\label{sLayout}Layouts}
 
-Configure one \textsf{layout} for each configuration of logical
-views. Name the layout using a unique name. Often only one layout with a
-one view is used for all canvases.
-
 \begin{wrapfigure}{r}{.382\textwidth}
   \includegraphics[width=.382\textwidth]{images/layout.png}
   {\caption{\label{fLayout}A Layout with four Views}}
 \end{wrapfigure}
+
+Configure one \textsf{layout} for each configuration of logical
+views. Name the layout using a unique name. Often only one layout with a
+one view is used for all canvases.
 
 Enable the layout on each desired canvas by adding it to the
 canvas. Since canvases reference layouts by name or index, layouts have
@@ -894,9 +898,9 @@ configurations:
   each contributor to the rendering. The destination channel may also be
   used as a source. 
   \begin{description}
-  \item[Decomposition] On each child compound, limit the rendering task
-    of that child by setting the \textsf{viewport}, \textsf{range},
-    \textsf{period} and \textsf{phase}, \textsf{pixel}, \textsf{eye} or
+  \item[Decomposition] On each child compound, limit the rendering task of that
+    child by setting the \textsf{viewport}, \textsf{range}, \textsf{period} and
+    \textsf{phase}, \textsf{pixel}, \textsf{subpixel}, \textsf{eye} or
     \textsf{zoom} as desired.
   \item[Runtime Adjustments] A \textsf{load\_equalizer} may be used on
     the destination compounds to set the \textsf{viewport} or
@@ -957,19 +961,18 @@ A compound can be configured to execute a specific set of tasks, for
 example to configure the multiple steps used by binary-swap compositing.
 
 \subsubsection{Decomposition - Attributes}
-Compounds have attributes which configure the decomposition of the
-destination channel's rendering, which is defined by the viewport,
-frustum and database. A \textsf{viewport} decomposes the destination
-channel and frustum in screen space. A \textsf{range} tells the
-application to render a part of its database, and an \textsf{eye}
-rendering pass can selectively render different stereo passes. A
-\textsf{pixel} parameter adjusts the frustum so that the source channel
-renders an even subset of the parent's pixels. A \textsf{subpixel} parameter
-tells the source channels to render different jittered frustum to perform
-anti-aliasing. Setting one or multiple attributes causes the parent's view
-to be decomposed accordingly. Attributes are cumulative, that is,
-intermediate compound attributes affect and therefore decompose the
-rendering of all their children.
+Compounds have attributes which configure the decomposition of the destination
+channel's rendering, which is defined by the viewport, frustum and database. A
+\textsf{viewport} decomposes the destination channel and frustum in screen
+space. A \textsf{range} tells the application to render a part of its database,
+and an \textsf{eye} rendering pass can selectively render different stereo
+passes. A \textsf{pixel} parameter adjusts the frustum so that the source
+channel renders an even subset of the parent's pixels. A \textsf{subpixel}
+parameter tells the source channels to render different samples for one pixel to
+perform anti-aliasing or depth-of-field rendering. Setting one or multiple
+attributes causes the parent's view to be decomposed accordingly. Attributes are
+cumulative, that is, intermediate compound attributes affect and therefore
+decompose the rendering of all their children.
 
 \subsubsection{Recomposition - Frames}
 Compounds use output and input frames to configure the recomposition of
@@ -1018,12 +1021,12 @@ configuration files using equalizers.
   \includegraphics[width=.382\textwidth]{images/lb.pdf}
   {\caption{\label{fLoadBalancing}\small 2D Load-Balancing}}
 \end{wrapfigure}
-While pixel and stereo compounds are naturally load-balanced, 2D and DB
-compounds often need load-balancing for optimal rendering
-performance. Using a load equalizer is transparent to the application,
-and can be used on any application for 2D, and on most applications for
-DB load-balancing. Some applications do not support dynamic updates of
-the database range, and therefore cannot be used with DB load-balancing.
+While pixel, subpixel and stereo compounds are naturally load-balanced, 2D and
+DB compounds often need load-balancing for optimal rendering performance. Using
+a load equalizer is transparent to the application, and can be used on any
+application for 2D, and on most applications for DB load-balancing. Some
+applications do not support dynamic updates of the database range, and therefore
+cannot be used with DB load-balancing.
 
 Using a 2D or DB load-balancer will adjust the 2D split or database range
 automatically each frame. The 2D load-balancer exists in three flavors:
@@ -1042,6 +1045,12 @@ uniform and a static DB decomposition typically results in a better
 performance.
 
 \paragraph{View Equalizer}
+
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/viewLB.pdf}
+  {\caption{\label{fViewLoadBalancing}\small Cross-Segment
+      Load-Balancing for two Segments using eight GPU's}}
+\end{wrapfigure}
 Depending on the model position and data structure, each segment of a
 multi-display system has a different rendering load. The segment with
 the biggest load determines the overall performance when using a static
@@ -1058,10 +1067,10 @@ equalizer, which assigns two GPU's to the left segment and four GPU's to
 the right segment, which leads to optimal performance for this model and
 camera position.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/viewLB.pdf}
-  {\caption{\label{fViewLoadBalancing}\small Cross-Segment
-      Load-Balancing for two Segments using eight GPU's}}
+\begin{wrapfigure}{r}{.382\textwidth} 
+    \includegraphics[width=.382\textwidth]{images/viewLB.png}
+    {\caption{\label{fViewLoadBalancing2}\small Cross-Segment
+        Load-Balancing for a CAVE}}
 \end{wrapfigure}
 The view equalizer can also use resources from another display resource,
 if this resource has little rendering load by itself. It is therefore
@@ -1070,11 +1079,6 @@ without any additional resources. This is particularly useful for
 installations with a higher number of displays where the rendering load
 is typically in a few segments only, e.g., for a CAVE.
 
-\begin{wrapfigure}{l}{.382\textwidth} 
-    \includegraphics[width=.382\textwidth]{images/viewLB.png}
-    {\caption{\label{fViewLoadBalancing2}\small Cross-Segment
-        Load-Balancing for a CAVE}}
-\end{wrapfigure}
 \fig{fViewLoadBalancing2} shows cross-usage for a five-sided CAVE driven
 by five GPU's. The front and left segments show the model and have a
 significant rendering load. The view equalizer assigns the GPU's from
@@ -1096,6 +1100,11 @@ equalizer will smoothen the swap buffer rate on the destination window
 for optimal user experience.
 
 \paragraph{DFR Equalizer}
+
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/dfr.pdf}
+  {\caption{\label{fDFR}Dynamic Frame Resolution}}
+\end{wrapfigure}
 Dynamic Frame Resolution (DFR) trades rendering performance for visual
 quality. The rendering for a channel is done at a different resolution
 than the native channel resolution to keep the framerate constant. The
@@ -1103,10 +1112,6 @@ DFR equalizer adjusts the zoom of a channel, based on the target and
 current framerate. It is typically used for fill-rate bound
 applications, such as volume rendering and ray-tracing.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/dfr.pdf}
-  {\caption{\label{fDFR}Dynamic Frame Resolution}}
-\end{wrapfigure}
 \fig{fDFR}\footnote{Data set courtesy of Olaf Ronneberger, Computer
   Science Institute, University of Freiburg, Germany} shows DFR for
 volume rendering. To achieve 10 frames per second, the model is rendered
@@ -1141,6 +1146,7 @@ display wall is driven by a separate control station. The rendering
 happens only on the display wall, and the control window receives the
 correctly downscaled version of the rendering.
 
+\clearpage
 \part{Programming Guide}
 
 To modify an application for Equalizer, the programmer structures the
@@ -2644,15 +2650,15 @@ all data specific to the OpenGL context.
 
 \subsubsection{Window System Interface}
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \vspace{-2ex}\includegraphics[width=.618\textwidth]{images/osWindow.pdf}
+  {\caption{\label{fOSWindow}eq::OSWindow UML Class Hierarchy}}\vspace{-4ex}
+\end{wrapfigure}
 The particulars of creating a window and OpenGL context depend on the
 window system used. One can either use the implementation provided by
 the operating system, e.g., AGL, WGL or glX, or some higher-level
 toolkit, e.g., Qt.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/osWindow.pdf}
-  {\caption{\label{fOSWindow}eq::OSWindow UML Class Hierarchy}}
-\end{wrapfigure}
 All window-system specific functionality is implemented by a
 specialization of \textsf{eq::OS\-Window}. The \textsf{OSWindow} class
 defines the minimal interface to be implemented for a new window
@@ -2881,11 +2887,11 @@ context consist of:
   viewport is influenced by the destination channel's viewport
   definition and compound viewports set for sort-first/2D decompositions.
 \item[Frustum] The same frustum parameters as defined by
-  \textsf{glFrustum}. Typically the frustum used to set up the OpenGL
-  projection matrix. The frustum is influenced by the destination
-  channel's view definition, compound viewports, head matrix and the
-  current eye pass. If the anti-aliasing idle mode is set, the frustum
-  will be jittered by a vector. This part is described in \ref{sFSAA}.
+  \textsf{glFrustum}. Typically the frustum used to set up the OpenGL projection
+  matrix. The frustum is influenced by the destination channel's view
+  definition, compound viewports, head matrix and the current eye pass. If the
+  channel has a subpixel parameter, the frustum will be jittered before it is
+  applied. Please refer to \ref{sFSAA} for more information.
 \item[Head Transformation] A transformation matrix positioning the
   frustum. This is typically an identity matrix and is used for off-axis
   frusta in immersive rendering. It is normally used to set up the
@@ -3039,11 +3045,11 @@ and its right child [0.5, 1], and so on for all nodes in the tree. The
 preprocessed model is saved in a binary format for accelerating
 subsequent loading.
 
-%\begin{wrapfigure}{r}{.618\textwidth}
-\begin{figure}[h!t]\center
+\begin{wrapfigure}{r}{.618\textwidth}
+%\begin{figure}[h!t]\center
   \includegraphics[width=.618\textwidth]{images/render.pdf}
   {\caption{\label{fRender}Main Render Loop}}
-\end{figure}
+\end{wrapfigure}
 The rendering loop maintains a list of candidates to render, which
 initially contains the root node. Each candidate of this list is tested
 for full visibility against the frustum and range, and rendered if
@@ -3147,8 +3153,10 @@ void Channel::frameReadback( const uint32_t frameID )
 }
 \end{lstlisting}}
 
-\textsf{frameAssemble} is overwritten for the use of Subpixel compound.
-The whole process is described in \ref{sFSAA}.
+The \textsf{frameAssemble} method is overwritten for the use of Subpixel
+compound with idle software anti-aliasing, as described in \ref{sFSAA}.
+
+
 
 \section{Advanced Features}
 
@@ -3212,12 +3220,6 @@ widget sets such as Qt.
 
 \subsubsection{Event Data Flow}
 
-\begin{wrapfigure}{r}{.382\textwidth}
-\vspace{-2ex}
-  \includegraphics[width=.382\textwidth]{images/eventFilter.pdf}
-  {\caption{\label{fEventProcessing}Event Processing}}
-\vspace{-4ex}
-\end{wrapfigure}
 Events are received by an event handler. The event handler finds the
 \textsf{eq::OSWindow} associated to the event. It then creates a generic
 \textsf{Event}, which holds the event data in an independent
@@ -3225,6 +3227,10 @@ format. The original native event and this generic \textsf{Event}
 form the \textsf{OSWindowEvent}, which is passed to the concrete
 \textsf{OSWindow} for processing.
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/eventFilter.pdf}
+  {\caption{\label{fEventProcessing}Event Processing}}
+\end{wrapfigure}
 The purpose of the \textsf{OSWindow} processing method,
 \textsf{processEvent}, is to perform window-system specific event
 processing. For example, \textsf{AGLWindow::processEvent} calls
@@ -3255,16 +3261,16 @@ event handling function.
 
 \subsubsection{Default Implementation}
 
-Equalizer provides an \textsf{AGLEvent\-Handler},
-\textsf{GLXEventHandler} and \textsf{WGL\-Event\-Handler}, which handle
-events for an \textsf{AGLWindowIF}, \textsf{GLXWindowIF} and
-\textsf{WGLWindowIF}, respectively. \fig{fEventUML} illustrates the
-class hierarchy for event processing.
-
 \begin{wrapfigure}{r}{.618\textwidth}
   \includegraphics[width=.618\textwidth]{images/eventUML.pdf}
   {\caption{\label{fEventUML}UML Diagram for Event Handling Classes}}
 \end{wrapfigure}
+Equalizer provides an \textsf{AGLEvent\-Handler},
+\textsf{GLXEventHandler} and \textsf{WGL\-Event\-Handler}, which handle
+events for an \textsf{AGLWindowIF}, \textsf{GLXWindowIF} and
+\textsf{WGL\-Win\-dowIF}, respectively. \fig{fEventUML} illustrates the
+class hierarchy for event processing.
+
 The concrete implementation of these window interfaces is responsible
 for setting up and de-initializing event handling.
 
@@ -3393,15 +3399,15 @@ performance through higher asynchronicity.
 
 \subsubsection{Threads}
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/threads.pdf}
+  {\caption{\label{fThreads}Threads within one Node Process}}
+\end{wrapfigure}
 The application or node main thread is the primary thread of each
 process and executes the \textsf{main} function. The application and
 render clients initialize the local node for communications with other
 nodes, including the server, using \textsf{Client::initLocal}.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/threads.pdf}
-  {\caption{\label{fThreads}Threads within one Node Process}}
-\end{wrapfigure}
 During this initialization, Equalizer creates and manages two threads
 for communication, the receiver thread and the command thread. Normally
 no application code is executed from these two threads.
@@ -3507,6 +3513,10 @@ of the scene data.
 
 \subsubsection{Thread Synchronization in Detail}
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/frameSync.pdf}
+  {\caption{\label{fFrameSync}Per-Node Frame Synchronization}}
+\end{wrapfigure}
 The application has extended control over the task synchronization
 during a frame. Upon \textsf{Config::startFrame}, Equalizer invokes the
 \textsf{frameStart} task methods of the various entities. The entities
@@ -3517,10 +3527,6 @@ e.g., \textsf{Window::startFrame}, are currently empty since the
 synchronization is implicit due to the sequential execution within the
 thread.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/frameSync.pdf}
-  {\caption{\label{fFrameSync}Per-Node Frame Synchronization}}
-\end{wrapfigure}
 Each entity uses \textsf{waitFrame\-Started} to block on the parent's
 \textsf{startFrame}, e.g., \textsf{Pipe::\-frame\-Start} calls
 \textsf{Node::wait\-Frame\-Started} to wait for the corresponding
@@ -4020,17 +4026,15 @@ since it resets the config's running state.
 
 \subsubsection{View Frustum Update}
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \vspace{-2ex}
-  \includegraphics[width=.382\textwidth]{images/viewUML.pdf}
-  {\caption{\label{fViewUML}UML Hierarchy of \textsf{eqPly::View}}}
-  \vspace{-5ex}
-\end{wrapfigure}
 Changing view frustum parameters is typically done for non-fullscreen
 application windows and multi-view layouts, where the rendering is not
 meant to be viewed in real-world size in an immersive environment. A
 typical use case is changing the field-of-view of the rendering.
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/viewUML.pdf}
+  {\caption{\label{fViewUML}UML Hierarchy of \textsf{eqPly::View}}}
+\end{wrapfigure}
 A view is derived from \textsf{eq::Frustum} (\fig{fViewUML}), and the
 application process can set the wall or projection parameters at
 runtime. For a description of wall and projection parameters please refer
@@ -4126,15 +4130,16 @@ calculate the compressor characteristics.
 
 \subsubsection{\label{sDirectSend}Parallel Direct Send Compositing}
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/directSend.pdf}
+  {\caption{\label{fDirectSend}Direct Send Compositing}}
+  \vspace{-3ex}
+\end{wrapfigure}
 To provide a motivation for the design of the image compositing
 API, the direct send parallel compositing algorithm is introduced in this
 section. Other parallel compositing algorithms, e.g. binary-swap, can
 also be expressed through an Equalizer configuration file.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/directSend.pdf}
-  {\caption{\label{fDirectSend}Direct Send Compositing}}
-\end{wrapfigure}
 The main idea behind direct send is to parallelize the costly
 recomposition for database (sort-last) decomposition. With each
 additional source channel, the amount of pixel data to be composited
@@ -4180,6 +4185,10 @@ frame data is the object connecting output with input frames. Output and
 input frames with the same name within the same compound tree will
 reference the same frame data.
 
+\begin{wrapfigure}{r}{.618\textwidth}
+  \includegraphics[width=.618\textwidth]{images/assembly.pdf}
+  {\caption{\label{fAssembly}Hierarchy of Assembly Classes}}
+\end{wrapfigure}
 The frame data is a holder for images and additional information, such
 as output frame attributes and pixel data availability.
 
@@ -4187,10 +4196,6 @@ An \textsf{eq::Image} holds a
 two-dimensional snapshot of the framebuffer and can contain color and/or
 depth information.
 
-\begin{wrapfigure}{r}{.618\textwidth}
-  \includegraphics[width=.618\textwidth]{images/assembly.pdf}
-  {\caption{\label{fAssembly}Hierarchy of Assembly Classes}}
-\end{wrapfigure}
 The frame synchronization through the frame data allows the input frame
 to wait for the pixel data to become ready, which is signaled by the
 output frame after readback.
@@ -4267,6 +4272,10 @@ view-aligned slices. The slices are rendered back-to-front and blended
 to produce the final image, as shown in \fig{fSlices}\footnote{Volume
   Data Set courtesy of: SFB-382 of the German Research Council (DFG)}.
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/slices.pdf}
+  {\caption{\label{fSlices}Volume Rendering using 3D Textures}}
+\end{wrapfigure}
 When using 2D (sort-first) or stereo decompositions, no special
 programming is needed to achieve good scalability, as \textsf{eVolve} is
 mostly fill-limited and therefore scales nicely in these modes. 
@@ -4277,10 +4286,6 @@ of the bricks is rendered like a separate volume. For recomposition, the
 \textsf{RGBA} frame buffer data resulting from these render passes then
 has to be assembled correctly. 
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/slices.pdf}
-  {\caption{\label{fSlices}Volume Rendering using 3D Textures}}
-\end{wrapfigure}
 Conceptually, the individual volume bricks of each of the source
 channels produces pixel data which can be handled like one big 'slice'
 through the full texture. Therefore they have to be blen\-ded
@@ -4295,6 +4300,10 @@ amount of texture memory needed for each node decreases linearly, they
 make it possible to render data sets which are not feasible to
 visualize with any other approach.
 
+\begin{wrapfigure}{r}{.382\textwidth}
+  \includegraphics[width=.382\textwidth]{images/volResult.png}
+  {\caption{\label{fVolResult}Result of \fig{fBlendPerspective}}}
+\end{wrapfigure}
 For recomposition, the 2D frame buffer contents are blended to form a
 seamless picture. For correct blending, the frames are ordered in the
 same back-to-front order as the slices used for rendering, and use the
@@ -4310,10 +4319,6 @@ dimension. Therefore the range of the resulting frame buffer images,
 together with the sorting order, is used to arrange the frames during
 compositing. \fig{fBlendOrtho} shows this composition for one view.
 
-\begin{wrapfigure}{r}{.382\textwidth}
-  \includegraphics[width=.382\textwidth]{images/volResult.png}
-  {\caption{\label{fVolResult}Result of \fig{fBlendPerspective}}}
-\end{wrapfigure}
 Finding the correct assembly order for perspective frusta is more
 complex. The perspective distortion invalidates a simple orientation
 criteria like the one used for orthographic frusta. For the view and
@@ -4344,40 +4349,41 @@ channel. \fig{fVolResult} shows the result of the composition from
 The assembly algorithm described in this section also works with parallel
 compositing algorithms such as direct-send. 
 
-\subsection{\label{sFSAA}Full-scene and Software Anti-Aliasing}
+\subsection{\label{sFSAA}Custom Subpixel Processing}
 
-The eqPly example contains support for software anti-aliasing to show 
-how to combine it with the Equalizer Subpixel compound.
+The eqPly example contains support for software anti-aliasing when being idle,
+showing how to combine it with subpixel compounds.
 
-\subsubsection{FSAA or Supersampling algorithm}
+\subsubsection{Supersampling Algorithm}
 
-The anti-aliasing algorithm uses here the supersampling technique which 
-computes samples within a pixel using the jitter algorithm. The pixel is split
-into several sub-pixels and a sample is taken randomly within the sub-pixel. 
+The supersampling algorith used by eqPly performs anti-aliasing, using a
+technique which computes samples within a pixel by jittering the frustum by a
+subpixel amount. The pixel is split into several, regular sub-pixels and a
+sample is taken randomly within the sub-pixel.
 
-The sub-pixel area is a function of the current jitter step and the channel's
-\textsf{subpixel} description. Jitter values for all channels should be evenly 
-distributed over the total sub-pixel grid and we use therefore a precomputed
-prime number table.
+The subpixel area is a function of the current jitter step and the channel's
+\textsf{subpixel} description. To evenly distribute jitter values for all
+channels over the total sub-pixel grid a precomputed prime number table is used
+to pseudo-randomly select the subpixel:
 
 {\footnotesize\begin{lstlisting}
 eq::Vector2i Channel::_getJitterStep() const
 {
     uint32_t channelID  = getSubPixel().index;
     uint32_t idx = ( channelID * _totalSteps );
-    idx += ( _jitterStep * primeNumberTable[ channelID ] ) \% _totalSteps;
+    idx += ( _jitterStep * primeNumberTable[ channelID ] ) % _totalSteps;
 
     uint32_t sampleSize = _getSampleSize();
-    const int dx = idx \% sampleSize;
+    const int dx = idx % sampleSize;
     const int dy = idx / sampleSize;
 
     return eq::Vector2i( dx, dy );
 }
 \end{lstlisting}}
 
-Next to that, sizes of a pixel and a sub-pixel on the near plane are computed.
-A random position within the sub-pixel is set as a sample position and the 
-vector values are correctly defined to finally be passed to the frustum.
+Using this normalized subpixel center point and the size of a pixel on the near
+plane, the jitter for the frustum is computed. A random position within the
+sub-pixel is set as a sample position, which will be used to move the frustum:
 
 {\footnotesize\begin{lstlisting}
 eq::Vector2f Channel::_getJitter() const
@@ -4409,16 +4415,12 @@ eq::Vector2f Channel::_getJitter() const
 }
 \end{lstlisting}}
 
-\subsubsection{SWAA in eqPly}
+\subsubsection{Idle Anti-Aliasing in eqPly}
 
-This is the \textsf{FrameData} class which will give the information to the
-application about being in idle mode or not. \textsf{Config} will update the 
-idle mode information to the new \textsf{FrameData} version depending of the 
-application state.
-
-Since the application has a notion of idle/non-idle rendering, the 
-\textsf{Channel} will be able to perform anti-aliasing when no user event is
-detected and more frames are requested.
+The \textsf{FrameData} class holds the information whether or not the
+application is in idle mode. The \textsf{Config} updates the idle mode
+information depending on the application's state.  Each \textsf{Channel} will
+perform anti-aliasing when no user event requires a redraw.
 
 If the application is in idle mode, the \textsf{applyFrustum} operation will 
 apply the computed jitter vector to the current frustum.
@@ -4458,13 +4460,15 @@ void Channel::applyFrustum() const
 }
 \end{lstlisting}}
 
-Then, \textsf{frameViewFinish} will get the frame buffer and accumulate 
-it into an accumulation buffer. At each jitter step, the average result 
-contained in the accumulation buffer will be displayed until all the steps
-are done.
-If the current pixel viewport is different from the one saved in 
-\textsf{frameViewStart}, the accumulation buffer needs also to be resized 
-and the idle anti-aliasing is reset.
+At the end of the frame, \textsf{frameViewFinish} accumulates the frame buffer
+into an accumulation buffer. Since \textsf{frameViewFinish} is only called on
+destination channels this operation is done only on the final rendering
+result. After each frame, the result accumulated so far will be displayed. When
+all the steps are done the config will stop rendering new frames.
+
+If the current pixel viewport is different from the one saved in
+\textsf{frameViewStart}, the accumulation buffer needs also to be resized and
+the idle anti-aliasing is reset.
 
 {\footnotesize\begin{lstlisting}
 void Channel::frameViewFinish( const uint32_t frameID )
@@ -4501,70 +4505,44 @@ void Channel::frameViewFinish( const uint32_t frameID )
 }
 \end{lstlisting}}
 
-At the end, \textsf{frameFinish} will decrement the jitter step and create a
-new event to inform the \textsf{Config} of how much frames which remain to 
-draw.
+At the end of the frame for each channel, \textsf{frameFinish} will decrement
+the jitter step and create a new event to inform the \textsf{Config} of how many
+frames remain to draw before the idle anti-aliasing is complete.
 
-\subsubsection{SWAA in Equalizer}
+\subsubsection{Transparent Software Anti-Aliasing}
 
-As the software anti-aliasing decomposition should also work with the idle 
-anti-aliasing in the application, the accumulation buffer is part of the 
-\textsf{ObjectManager}. \textsf{frameAssemble} and \textsf{frameViewFinish} 
-will then share the same accumulation buffer.
+Any Equalizer applications can benefit without modification from subpixel
+compounds. Applications performing their own, configurable idle or non-idle
+anti-aliasing can easily be integrated with subpixel compounds, as described in
+the next section.
 
-As for the application, the \textsf{eq::Channel::applyFrustum} will apply the
-jitter vector if it exists. Then, if the function is not overwritten in the
-application but if it still uses \textsf{subpixel} compounds, anti-aliasing 
-will be correctly computed in Equalizer.
+The default implementation of \textsf{applyFrustum} and \textsf{applyOrtho} in
+\textsf{eq::Channel} apply jittering when a subpixel parameter is set.
+Furthermore, the \textsf{Compositor} uses an \textsf{eq::Accum} buffer to
+accumulate and display the results of a subpixel decomposition in \textsf{assembleFramesUnsorted} and \textsf{assembleFramesSorted}.
 
-The main bit here is the assembly operation. \textsf{assembleFramesUnsorted} 
-and \textsf{assembleFramesSorted} are similarly modified to handle the 
-Subpixel decomposition.
 
-For each Subpixel decomposition in input frames, all input frames are 
-assembled with \textsf{subpixel} decomposition. The result is then accumulated
-and displayed.
+\subsubsection{Subpixel Compounds in eqPly}
 
-For example a 2-way subpixel compound configuration like 
-\textsf{[0 2] [0 2] [1 2] [1 2]} will first assemble the both \textsf{[0 2]}
-input frames and accumulate the result of the two assemblies. 
-Similarly, the the both \textsf{[1 2]} frames are assembled and their result 
-accumulated to the previous one.
-In another hand, a 4-way subpixel compound configuration will do four 
-assemblies and four accumulations.
+Subpixel compounds accelerate the idle anti-aliasing computation in eqPly. The
+accumulation buffer used in the \textsf{Compositor} in \textsf{frameAssemble} is
+the same accumulation buffer used by eqPly in \textsf{frameViewFinish} for
+collecting the idle anti-aliasing results.
 
-{\footnotesize\begin{lstlisting}
-void Compositor::assembleFramesUnsorted( const FrameVector& frames, 
-                                         Channel* channel, Accum* accum )
-{
-    if( frames.empty( ))
-        return;
+When an application is passing an \textsf{eq::Accum} object to the compositor,
+the compositor adds subpixel decomposition result into this accumulation
+buffer. Otherwise it uses its own accumulation buffer, which it clears in the
+beginning of the compositing process.
 
-    if( _isSubPixelDecomposition( frames ))
-    {
-        if( !accum )
-        {
-            accum = obtainAccum( channel );
-            accum->clear();
-        }
+Since \textsf{eqPly} accumulates the results over multiple rendering frames,
+each \textsf{Channel} manages its own accumulation buffer, which is passed to
+the compositor in \textsf{frameAssemble} and used in \textsf{frameViewFinish} to
+display the results accumulated so far.
 
-        FrameVector framesLeft = frames;
-    	while( !framesLeft.empty( ))
-    	{
-            // Get the frames with the same subpixel compound
-    	    FrameVector current = _extractOneSubPixel( framesLeft );
-            assembleFramesUnsorted( current, channel, accum );
-            accum->accum();
-            accum->display();
-        }
-        return;
-    }
-
-    [...]
-
-    // assemble frame
-}
-\end{lstlisting}}
+The number of performed jitter steps is tracked in \textsf{frameDraw} and
+\textsf{frameAssemble}, and is used in \textsf{frameFinish} to decrement the
+outstanding anti-aliasing samples. Therefore, the idle anti-aliasing is finished
+much faster if the current configuration uses a subpixel compound.
 
 \subsection{\label{sStatistics}Statistics}
 
