Programming Guide: fix typo
[ ] May break build
[ ] May break existing applications
[x] Bugfix
[ ] New Feature
[ ] Cleanup
[ ] Optimization
[ ] Documentation

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -619,7 +619,7 @@ application thread.
 
 \subsection{Pipe}
 
-For each node, create on \textsf{pipe} for each graphics card in the
+For each node, create one \textsf{pipe} for each graphics card in the
 machine. Set the \textsf{device} number to the correct index. On
 operating systems using X11, e.g., Linux, also set the port number if
 your X-Server is running on a nonstandard port.
